Convert posts to markdown and host images locally

--- a/_posts/2015-03-06-pixels.md
+++ b/_posts/2015-03-06-pixels.md
@@ -1,84 +1,93 @@
 ---
 layout: post
-title:  How Many Pixels do I need to Get to 300dpi?
+title:  How Many Pixels do I need to Get to 300 dpi?
 date:   2015-03-06
 ---
 
-As many of you know, the resolution of an image determines how clear or grainy it will look when you print it. As a general rule, any time you need to print an image, make sure it is 300 dpi. <a title="Pixels &amp; dpi explanation" href="http://www.photoshopessentials.com/essentials/image-quality/" target="_blank">This post has an excellent explanation.</a>
+As many of you know, the resolution of an image determines how clear or grainy it will look when you print it. As a general rule, any time you need to print an image, make sure it is 300 dpi. [This post has an excellent explanation](http://www.photoshopessentials.com/essentials/image-quality/).
 
-<em><strong>Okay great. But 300 dpi means nothing to me. Exactly how many pixels do I need in order to make the 4 x 6" image in my document print at 300 dpi?
-</strong></em>Good question. And the answer requires only a little bit of math.
+### Okay great. But 300 dpi means *nothing* to me. Exactly how many pixels do I need to make the 4" x 6" image in my document print at 300 dpi?
 
-1 inch = 300 pixels, so a 4 x 6" image requires 1200 x 1800 px to print at 300 dpi. If you need your image to go the whole way across the top of a standard piece of letter paper, that means you've got to find an image that's at least 8.5" wide, or 2550 px.
+Good question. And the answer requires only a little bit of math.
 
-<em><strong>What if I want the image to bleed off the edge of the page?
-</strong></em>Standard bleed size is 1/8 inch (or .125"). In pixels at 300 dpi, that's 38 px. If your image bleeds off of just the left side of a page, add .125" or 38 px to your width. If your image bleeds off both the left and right edges, add <em>another</em> .125" for a total of .25" or 75 px to your final width. If you're bleeding all over the place, add 75 px to your width and 75 px to your height.
-<p style="text-align: center;"><strong>Ex: 4 x 6" photo</strong>
-with no bleed: 1200 x 1800 px
-bleeding on all 4 sides: 1275 x 1875 px</p>
+1 inch = 300 pixels, so a 4" x 6" image requires 1200 x 1800 px to print at 300 dpi. If you need your image to go the whole way across the top of a standard piece of US letter paper (8.5" x 11"), that means you've got to find an image that's at least 8.5" wide, or 2550 px.
+
+### What if I want the image to go off the edge of the page?
+
+When the image goes off the side of a page, that's called "bleed". Standard bleed size is 1/8 inch (or .125"). In pixels at 300 dpi, that's 38 px. If your image bleeds off of just the left side of a page, add .125" or 38 px to your width. If your image bleeds off both the left and right edges, add <em>another</em> .125" for a total of .25" or 75 px to your final width. If you're bleeding all over the place, add 75 px to your width and 75 px to your height.
+
+```
+Ex: 4" x 6" photo
+----------------------------------------
+with no bleed:            1200 x 1800 px
+bleeding on all 4 sides:  1275 x 1875 px
+```
+
 And just for easy reference, a handy inch-to-pixel conversion chart.
+
+#### Inch-to-Pixel Conversion Chart
+
 <table border="1" width="100%" cellspacing="0" cellpadding="10">
-<tbody>
-<tr>
-<th scope="col" align="center">Printed Size</th>
-<th scope="col" align="center">Best: 300 dpi</th>
-<th scope="col" align="center">Okay: 250 dpi</th>
-<th scope="col" align="center">Lowest Acceptable: 200 dpi</th>
-</tr>
-<tr>
-<td align="center">In inches, W x H</td>
-<td align="center">In pixels, w x h</td>
-<td align="center">In pixels, w x h</td>
-<td align="center">In pixels, w x h</td>
-</tr>
-<tr>
-<td align="center">1 x 1 in</td>
-<td align="center">300 x 300 px</td>
-<td align="center">250 px w x 250 px h</td>
-<td align="center">200 px w x 200 px h</td>
-</tr>
-<tr>
-<td align="center">2 x 2 in</td>
-<td align="center">600 x 600 px</td>
-<td align="center">500 x 500 px</td>
-<td align="center">400 x 400 px</td>
-</tr>
-<tr>
-<td align="center">4 x 6 in</td>
-<td align="center">1200 x 1800 px</td>
-<td align="center">1000 x 1500 px</td>
-<td align="center">800 x 1200 px</td>
-</tr>
-<tr>
-<td align="center">5 x 7 in</td>
-<td align="center">1500 x 2100 px</td>
-<td align="center">1250 x 1750 px</td>
-<td align="center">1000 x 1400 px</td>
-</tr>
-<tr>
-<td align="center">8 x 10 in</td>
-<td align="center">2400 x 3000 px</td>
-<td align="center">2000 x 2500 px</td>
-<td align="center">1600 x 2000 px</td>
-</tr>
-<tr>
-<td align="center">8.5 x 11 in</td>
-<td align="center">2550 x 3300 px</td>
-<td align="center">2125 x 2750 px</td>
-<td align="center">1700 x 2200 px</td>
-</tr>
-<tr>
-<td align="center">11 x 17 in</td>
-<td align="center">3300 x 5100 px</td>
-<td align="center">2750 x 4250 px</td>
-<td align="center">2200 x 3400 px</td>
-</tr>
-<tr>
-<td align="center">Add .125 in per side for bleed</td>
-<td align="center">Add 38 px per side</td>
-<td align="center">Add 31 px per side</td>
-<td align="center">Add 25 px per side</td>
-</tr>
-</tbody>
+  <tbody>
+    <tr>
+      <th scope="col" align="center">Printed Size</th>
+      <th scope="col" align="center">Best: 300 dpi</th>
+      <th scope="col" align="center">Okay: 250 dpi</th>
+      <th scope="col" align="center">Lowest Acceptable: 200 dpi</th>
+    </tr>
+    <tr>
+      <td align="center">In inches, w x h</td>
+      <td align="center">In pixels, w x h</td>
+      <td align="center">In pixels, w x h</td>
+      <td align="center">In pixels, w x h</td>
+    </tr>
+    <tr>
+      <td align="center">1 x 1 in</td>
+      <td align="center">300 x 300 px</td>
+      <td align="center">250 px w x 250 px h</td>
+      <td align="center">200 px w x 200 px h</td>
+    </tr>
+    <tr>
+      <td align="center">2 x 2 in</td>
+      <td align="center">600 x 600 px</td>
+      <td align="center">500 x 500 px</td>
+      <td align="center">400 x 400 px</td>
+    </tr>
+    <tr>
+      <td align="center">4 x 6 in</td>
+      <td align="center">1200 x 1800 px</td>
+      <td align="center">1000 x 1500 px</td>
+      <td align="center">800 x 1200 px</td>
+    </tr>
+    <tr>
+      <td align="center">5 x 7 in</td>
+      <td align="center">1500 x 2100 px</td>
+      <td align="center">1250 x 1750 px</td>
+      <td align="center">1000 x 1400 px</td>
+    </tr>
+    <tr>
+      <td align="center">8 x 10 in</td>
+      <td align="center">2400 x 3000 px</td>
+      <td align="center">2000 x 2500 px</td>
+      <td align="center">1600 x 2000 px</td>
+    </tr>
+    <tr>
+      <td align="center">8.5 x 11 in</td>
+      <td align="center">2550 x 3300 px</td>
+      <td align="center">2125 x 2750 px</td>
+      <td align="center">1700 x 2200 px</td>
+    </tr>
+    <tr>
+      <td align="center">11 x 17 in</td>
+      <td align="center">3300 x 5100 px</td>
+      <td align="center">2750 x 4250 px</td>
+      <td align="center">2200 x 3400 px</td>
+    </tr>
+    <tr>
+      <td align="center">Add .125 in per side for bleed</td>
+      <td align="center">Add 38 px per side</td>
+      <td align="center">Add 31 px per side</td>
+      <td align="center">Add 25 px per side</td>
+    </tr>
+  </tbody>
 </table>
-&nbsp;
