--- a/_posts/2016-01-20-tarot.md
+++ b/_posts/2016-01-20-tarot.md
@@ -4,23 +4,20 @@ title:  Hot of the Presses - Self-Reading Tarot Deck
 date:   2016-01-20
 ---
 
-<img src="http://localflavormarketing.com/wp-content/uploads/2016/10/tarot-mini-set-featured-image.jpg" alt="" class="aligncenter size-full wp-image-1057" />
+<img src="{{ site.url }}/img/posts/tarot.jpg" alt="New Orleans Pocket Tarot" />
 
 I'm excited to announce a new project I've been working on: self-reading Pocket Tarot decks. Lots of people are curious about tarot, but are a little hesitant to get a reading or are not willing to put in the time it takes to learn all of the cards' meanings. About six months ago, I could certainly count myself as one. Since then, I've done a lot of research and created two solutions:
 
-1. An app that does readings for me (check out <a href="http://modernmystic.herokuapp.com/" target="_blank">ModernMystic</a>)
-2. A deck of cards with the meanings on them along with easy guides on how to interpret them
-
-The mini size deck: <a href="https://www.thegamecrafter.com/games/nola-pocket-tarot-mini-deck" target="_blank">https://www.thegamecrafter.com/games/nola-pocket-tarot-mini-deck</a>
-The poker card size deck: <a href="https://www.thegamecrafter.com/games/nola-pocket-tarot-poker-size" target="_blank">https://www.thegamecrafter.com/games/nola-pocket-tarot-poker-size</a>
+1. An app that does readings for me (check out [ModernMystic](http://modernmystic.herokuapp.com))
+2. A deck of cards with the meanings on them along with easy guides on how to interpret them ([mini size](https://www.thegamecrafter.com/games/permalink/3F85D2C8-BBFC-11E5-9AE3-7AAFB234A805) and [poker size](https://www.thegamecrafter.com/games/permalink/5C7EA4C4-BC8B-11E5-BF4C-A4D1B234A805))
 
 As a design project, it's been really fun. Like a lot of products and businesses in the New Orleans area, I've chosen to use a customized version of the watermeter covers as a the main design.
 
-<img src="http://localflavormarketing.com/wp-content/uploads/2016/10/tarto-tuck-front-rear-1.jpg" alt="" class="aligncenter size-full wp-image-1051" />
+<img src="{{ site.url }}/img/posts/tarot-tuck-front-rear.jpg" alt="tarot box" />
 
 It was also interesting to go from a full print-ready logo to one that is simplified enough to look good in embroidery stitches.
 
-<img src="http://localflavormarketing.com/wp-content/uploads/2017/02/pocket-tarot-logos.png" alt="" class="aligncenter size-full wp-image-1083" />
+<img src="{{ site.url }}/img/posts/pocket-tarot-logos.png" alt="logos" />
 
 I always think it's fun to publish something and be able to hold it in my hands. This project, however, is even more fun because of the joy it's bringing to other people. I've shown several people how to use the decks and we've all gotten a kick out of how crazy true these readings have been.
 
